# consolidator-proto

./: Cargo.toml  README.md  config.yaml  package-lock.json  package.json  reader.js
src/: aggregator.rs  auth.rs  config.rs  id.rs  logger.rs  main.rs  mmap_writer.rs  order_book.rs  router.rs  shutdown.rs  sinks.rs  sources_binance.rs  sources_deribit.rs  sources_hl.rs  types.rs  writer_envelope.rs
