[package]
name = "consolidator-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
bytes = "1"
parking_lot = "0.12"
byteorder = "1.4"
rand = "0.8"
once_cell = "1"
atty = "0.2"

# Hyperliquid SDK (you already use this)
hyperliquid_rust_sdk = { version = "0.5", default-features = false } # adjust version if needed

# Websocket / TLS for Deribit adapter
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3.31"
chron = "0.1.6"
chrono = "0.4.42"
tracing-log = "0.2.0"

# Optional useful utils (uncomment if you want)
# anyhow = "1"
# tracing-futures = "0.2"
